# dashparser

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: common_type.h  dash_parser.h  events.h
parser/: adaptation_set.cpp  adaptation_set.h  common_attributes.h  common_attributes_elements.cpp  common_attributes_elements.h  common_parser.cpp  common_parser.h  dash.cpp  dash.h  dash_parser.cpp  drm.h  identifier.h  mime.h  mpd.cpp  mpd.h  parser.cpp  parser.h  period.cpp  period.h  representation.cpp  representation.h  segment.cpp  segment.h  status.h  util.cpp  util.h
parser/base/: StringPiece.h  c_smart_ptr.h  helper.h  strings.cpp  strings.h  visibility.h
parser/utils/: dash_time.cpp  dash_time.h  prtime.cpp  prtime.h  url.h  url_parser.cpp  url_parser.h
parser/xml/: dash_xml.cpp  dash_xml.h  xml_smart_ptr.h
test/: CMakeLists.txt  test_mpd.cpp
test/assets/: base_url.mpd  index.txt  vod_segment_base.mpd
tests/: test_c_smart_ptr.cpp
